# property-ops-ml

./: .gitignore  LICENSE  README.md  pyproject.toml  use_published_model.py
docs/: FIRST_TIME_HUGGING_FACE_USE.md  HUGGING_FACE_PUBLISHING_GUIDE.md  VS_CODE_WALKTHROUGH.md
examples/sample_data/: market_rent.csv  renewals.csv  work_orders.csv
huggingface/property-maintenance-priority-baseline/: README.md  batch_inference_example.py  inference_example.py  requirements.txt  sample_maintenance_model.json  sample_record.json  sample_work_orders.csv
scripts/: demo_workflows.py  prepare_hf_model_repo.py  score_dataset_with_published_model.py  train_sample_model.py
src/property_ops_ml/: __init__.py  categories.py  cleaning.py  evaluation.py  features.py  inference.py  models.py  pipelines.py  schemas.py  scoring.py
tests/: test_cleaning.py  test_features_and_pipelines.py  test_models.py
