[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "property-ops-ml"
version = "0.1.0"
description = "Reusable data cleaning, feature engineering, scoring, and baseline ML tools for property-management analytics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Josefino Jr. De Guzman"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]
keywords = [
  "property-management",
  "analytics",
  "machine-learning",
  "feature-engineering",
  "data-cleaning",
]

[project.urls]
Homepage = "https://github.com/JunDeGuzman92/property-ops-ml"

[tool.setuptools.packages.find]
where = ["src"]

